--- a/index.html
+++ b/index.html
@@ -2,10 +2,15 @@
 <html>
 <body>
   <head>
-   <title>
-   building an app
-   </title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="./fonts.css">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300&family=Inter:wght@200&family=Nunito&family=Oswald&family=PT+Serif&family=Playfair+Display:wght@500&family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@200;300&family=Inter:wght@200&family=Nunito&family=Oswald&family=PT+Serif&family=Playfair+Display:wght@500&family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@200;300&family=Inter:wght@100;200&family=Nunito&family=Oswald&family=PT+Serif&family=Playfair+Display:wght@500&family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link rel ="stylesheet" href="./style.css">
+   <title>building an app</title>
   </head>
+
   <header>
     <div>app.creation</div>
     <nav>
