--- a/index.html
+++ b/index.html
@@ -1,33 +1,53 @@
 <!DOCTYPE html>
 <html>
 <body>
-  <head>
+   <head class="head">
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./fonts.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap" rel="stylesheet">
     <link rel ="stylesheet" href="./style.css">
-   <title>building an app</title>
+   <h1 class="head__title">
+   building an app
+   </h1>
   </head>
 
-  <header>
-    <div>app.creation</div>
-    <nav>
-       <a>start</a>
-       <a>services</a>
-       <a>about</a>
-       <a>blog</a>
-       <a>contact us</a>
+  <header class="header">
+    <div class="header__app.creation">
+    app.creation
+    </div>
+    <nav class="header__nav">
+       <a class="header__start">
+       start
+       </a>
+       <a class="header__services">
+       services
+       </a>
+       <a class="header__about">
+       about
+       </a>
+       <a class="header__blog">
+       blog
+       </a>
+       <a class="header__contact us">
+       contact us
+       </a>
     </nav>
   </header>
 
-  <section>
-      <main>
-        <h1>Building an App Without Design Expertise?</h1>
-        <p>I help tech startups design better digital products without
-hiring a full-time designer</p>
-        <button>Schedule free consultation</button>
+  <section class="section">
+      <main class="section__main">
+        <h1 class="section__title">
+        Building an App Without Design Expertise?
+        </h1>
+        <p class="section__subtitle">
+          I help tech startups design better digital products without
+hiring a full-time designer
+        </p>
+        <button class="section__button">
+        Schedule free consultation
+        </button>
       </main>
-        <div>
+        <div class="section__img">
            <img src="Frame.png">
         </div>
     </section>
