--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>building an app</title>
   </head>
 
+  <div class="wrapper">
   <header class="header">
     <p class="logo">
     app.creation
@@ -39,5 +40,6 @@ hiring a full-time designer
            <img class="image-content__image" src="Frame.png">
         </div>
     </section>
+  </div>
 </body>
 </html>
