--- a/index.html
+++ b/index.html
@@ -3,16 +3,15 @@
 <body>
    <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="./fonts.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap" rel="stylesheet">
+    <link rel = "stylesheet" href="fonts.css">
     <link rel ="stylesheet" href="./style.css">
     <title>building an app</title>
   </head>
 
+  <div class="wrapper">
   <header class="header">
-    <p class="logo">
-    app.creation
-  </p>
+    <div class="logo"></div>
     <nav class="menu">
        <a class="menu__item" href="#">start</a>
        <a class="menu__item" href="#">services</a>
@@ -39,5 +38,6 @@ hiring a full-time designer
            <img class="image-content__image" src="Frame.png">
         </div>
     </section>
+  </div>
 </body>
 </html>
