--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap" rel="stylesheet">
     <link rel = "stylesheet" href="fonts.css">
-    <link rel ="stylesheet" href="./style.css">
+    <link rel ="stylesheet" href="style.css">
     <title>building an app</title>
   </head>
 
