--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <div class="wrapper">
   <header class="header">
     <div class="logo">
-      <div class='logo_circle logo_circle_color_dark-blue'></div>
-      <div class='logo_circle logo_circle_color_blue'></div>
+      <div class='logo__circle logo__circle_color_dark-blue'></div>
+      <div class='logo__circle logo__circle_color_blue'></div>
       app.creation
     </div>
     <nav class="menu">
