--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
    <head>
     <meta charset="UTF-8">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">  
     <link rel = "stylesheet" href="fonts.css">
     <link rel ="stylesheet" href="style.css">
     <title>building an app</title>
