--- a/index.html
+++ b/index.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html>
-<body>
    <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="./fonts.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap" rel="stylesheet">
-    <link rel ="stylesheet" href="./style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">  
+    <link rel = "stylesheet" href="fonts.css">
+    <link rel ="stylesheet" href="style.css">
     <title>building an app</title>
   </head>
-
+   
+<body>
   <div class="wrapper">
   <header class="header">
-    <p class="logo">
-    app.creation
-  </p>
+    <div class="logo">
+      <div class='logo__circle logo__circle_color_dark-blue'></div>
+      <div class='logo__circle logo__circle_color_blue'></div>
+      app.creation
+    </div>
     <nav class="menu">
        <a class="menu__item" href="#">start</a>
-       <a class="menu__item" href="#">services</a>
+       <a class="menu__item menu__item_active" href="#">services</a>
        <a class="menu__item" href="#">about</a>
        <a class="menu__item" href="#">blog</a>
        <a class="menu__item" href="#">contact us</a>
