--- a/index.html
+++ b/index.html
@@ -26,22 +26,16 @@
     </nav>
   </header>
 
-  <section class="main-section">
-      <main class="main-content">
-        <h1 class="main-content__title">
+  <section class="main">
+        <h1 class="main__title">
         Building an App Without Design Expertise?
         </h1>
-        <p class="main-content__subtitle">
-          I help tech startups design better digital products without
-hiring a full-time designer
+        <p class="main__subtitle">
+          I help tech startups design better digital products without hiring a full-time designer
         </p>
-        <button class="main-content__button">
+        <button class="main__button"> type="button" name="button"
         Schedule free consultation
-        </button>
-      </main>
-        <div class="image-content">
-           <img class="image-content__image" src="Frame.png">
-        </div>
+     </button>
     </section>
   </div>
 </body>
