--- a/index.html
+++ b/index.html
@@ -28,8 +28,12 @@
 
   <section class="main">
         <h1 class="main__title">
-        Building an App Without Design Expertise?
+        Building an App 
+        <span class="main__title-text-highlight">
+           Without Design Expertise?
+           </span>
         </h1>
+     
         <p class="main__subtitle">
           I help tech startups design better digital products without hiring a full-time designer
         </p>
