--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
         <p class="main__subtitle">
           I help tech startups design better digital products without hiring a full-time designer
         </p>
-        <button class="main__button"> type="button" name="button"
+        <button class="main__button"> 
+        <type="button" name="button">
         Schedule free consultation
      </button>
     </section>
