--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
         Schedule free consultation
      </button>
     </section>
+    
+       <p class="points">
+       ...
+     </p>
   </div>
 </body>
 </html>
