--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </h1>
      
         <p class="main__subtitle">
-          I help tech startups design better digital <br/> products without hiring a full-time designer
+          I help tech startups design better digital <br/> products without hiring a&nbsp;full-time designer
         </p>
         <button class="main__button" type="button" name="button">
         Schedule free consultation
