--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel = "stylesheet" href="fonts.css">
     <link rel ="stylesheet" href="style.css">
     <title>building an app</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
    
 <body>
