--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
            Without Design Expertise?
            </span>
         </h1>
+        
+        <div class="main__img">
+        </div>
      
         <p class="main__subtitle">
           I help tech startups design better digital <br/> products without hiring a&nbsp;full-time designer
