--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </h1>
        
         <p class="main__subtitle">
-          I help tech startups design better digital <br/> products without hiring a full-time designer
+          I help tech startups design better digital products without hiring a full-time designer
      </p>
      
         <button class="main__button" type="button" name="button">
