--- a/index.html
+++ b/index.html
@@ -24,6 +24,19 @@
        <a class="menu__item" href="#">blog</a>
        <a class="menu__item" href="#">contact us</a>
     </nav>
+    <div class="hamburger-menu">
+  <input id="menu__toggle" type="checkbox" />
+  <label class="menu__btn" for="menu__toggle">
+    <span></span>
+  </label>
+  <ul class="menu__box">
+    <li><a class="menu__item" href="#">start</a></li>
+    <li><a class="menu__item" href="#">serices/a></li>
+    <li><a class="menu__item" href="#">about</a></li>
+    <li><a class="menu__item" href="#">blog</a></li>
+    <li><a class="menu__item" href="#">Кcontact ud</a></li>
+  </ul>
+</div>
   </header>
 
   <section class="main">
