--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
   </label>
   <ul class="menu__box">
     <li><a class="menu__item" href="#">start</a></li>
-    <li><a class="menu__item" href="#">serices/a></li>
+    <li><a class="menu__item" href="#">services/a></li>
     <li><a class="menu__item" href="#">about</a></li>
     <li><a class="menu__item" href="#">blog</a></li>
-    <li><a class="menu__item" href="#">Кcontact ud</a></li>
+    <li><a class="menu__item" href="#">contact us</a></li>
   </ul>
 </div>
   </header>
