--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 
   <section class="main">
         <h1 class="main__title">
-        Building an App  Without Design Expertise?
+        Building an App
         <span class="main__title-text_highlight">
-           Without Design Expertise
+           Without Design Expertise?
            </span>
         </h1>
 
