--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
    <head>
     <meta charset="UTF-8">
+    <link href="https://fonts.google.com/specimen/Roboto#:~:text=https%3A//fonts.googleapis.com/css2%3Ffamily%3DRoboto%26display%3Dswap" rel="stylesheet">
     <link rel = "stylesheet" href="fonts.css">
     <link rel ="stylesheet" href="style.css">
     <title>building an app</title>
