--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
         <h1 class="main__title">
         Building an App
         <span class="main__title-text_highlight">
-           Without Design Expertise?
+           Without Design Expertise
            </span>
+           ?
         </h1>
 
         <p class="main__subtitle">
