--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
         Building an App
         <span class="main__title-text_highlight">
            Without Design Expertise
-           </span>
-        ?
+           </span>?
         </h1>
 
         <p class="main__subtitle">
