--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
   <section class="main">
         <h1 class="main__title">
         Building an App
-        <span class="main__title-text_highlight"> Without Design Expertise </span>
-        ?
+        <span class="main__title-text_highlight"> Without Design Expertise </span>?
         </h1>
 
         <p class="main__subtitle">
